--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using ClaseCuatroHerramientas
-@namespace ClaseCuatroHerramientas.Pages
+@using ClaseCuatroHerramientas.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
